# Daedalus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MULTIMODEL_DESIGN.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  performance.yml
.github/workflows/: bench.yml  ci.yml  real-model-verify.yml  release.yml
.hermes/plans/: 2026-07-13_000000-daedalus-throughput-optimization.md
airlift/: __init__.py  cli.py  engine.py  governor.py  sensors.py  server.py  tools.py
airlift/cache/: __init__.py
bench/: bench.py  copy_cost.py  e2e_server.py  head_to_head.py  model_verify.py  prefill_tune.py  regression.py  smoke.py  swap_verify.py  thermal_validation.py  throughput_bench.py
bench/results/: thermal_off.json  thermal_on.json
daedalus/: __init__.py  audit.py  cli.py  engine.py  governor.py  metrics.py  observability.py  reasoning.py  runtime.py  scheduler.py  sensors.py  server.py
daedalus/cache/: __init__.py  cli.py  store.py
daedalus/server/: __init__.py  app.py  generation.py  http_utils.py  profiles.py  prompts.py  state.py
docs/: daedalus.html  docs.html  index.html  integrations.md  master-audit-plan.md  swap-validation.md  vercel.json
docs/plans/: daedalus-improvements.md
examples/: warm-prompts.json
packaging/homebrew/: daedalus.rb
packaging/pyinstaller/: daedalus.spec
scripts/: com.daedalus.server.plist.template  validate_swap.py
tests/: test_audit.py  test_audit_fixes.py  test_bench_regression.py  test_cache.py  test_cache_store.py  test_config_discovery.py  test_doctor.py  test_engine.py  test_governor.py  test_multimodel.py  test_normalize.py  test_observability.py  test_ops_polish.py  test_pr1_multimodel_correctness.py  test_pr5_fixes.py  test_reasoning.py  test_runtime.py  test_scheduler.py  test_sensors.py  test_server.py  test_smoke_gate.py  test_tools.py  test_warm_examples.py
